Release Notes

* 3/3/2016
  * fixed maxEvents for zero event files

* 2/25/2016
  * added allowInputLAN

* 2/23/2016
  * changed AtlasPJB to support allowInputWAN
  * removed some AGIS dependency from JG

* 2/22/2016
  * changed to update superstatus when scouting->exhausted

* 2/18/2016
  * changed hasZeroShare to work with processingType=validation in non-validation WQ
  * added doForPreStaging to AtlasAWD

* 2/16/2016
  * changed getScoutJobData to use jobs with nEvents<10 and wall>6h too

* 2/15/2016
  * added workQueueName
  * aded mcore_repro
  * added altStageOut

* 2/10/2016
  * fixed retryTask to correctly set status of secondary datasets
  * fixed to register final datasets when internal merge is used
  * removed T1 constraint from AtlasPJB for high prio or scouts  

* 2/9/2016
  * added nokill to reassignTask

* 2/8/2016
  * added network weights to brokerage

* 2/4/2016
  * fixed ToBeProcessed to correctly read secondary files when multiple RAM requirements
  * changed finishTask to ignore failGoalUnreached
  * setting nucleus and eventService in jobSpec

* 2/3/2016
  * fixed MIDDLENAME for multi fileds of addNthFieldOfInDSToLFN
  * changed AtlasPTB to use any nuclei where input is available when no nuclei can run jobs

* 2/1/2016
  * added reassignTaskToNucleus
  * fixed insertFilesForDataset_JEDI for ready->defined in scout

* 1/30/2016
  * changed log messages of AtlasPTB to be compatible with bamboo

* 1/27/2016
  * changed AtlasPTB to get messages from AtlasPJB

* 1/25/2016
  * changed addNthFieldToLFN to allow multiple fields

* 1/19/2016
  * changed AtlasPP to set lifetime to failed log datasets 
  * fixed getAnalSitesWithData to ignore STAGING

* 1/18/2016
  * changed getScoutJobData to reduce baseWalltime when calculating cpuTime
  * changed TR to respect the boolean vale for failWhenGoalUnreached

* 1/15/2016
  * changed message type for WORLD taskbrokerage
  * setting maxWalltime to maxCpuCount for HS06